--- a/NewLinuxSetup.org
+++ b/NewLinuxSetup.org
@@ -6,7 +6,7 @@
 *** mkdir -p ~/tmp/vim_backup
 *** cd ~/.vim/bundle && git clone git://github.com/altercation/vim-colors-solarized.git
 * Download & install:
-** Chrome
+** Chrome - although I'm noticing it's a CPU hog, at least in VM, at least w/ lots of tabs
 ** LastPass
 ** Dropbox
 *** Then clone dotfiles
@@ -18,6 +18,11 @@
 
 
  -
+** TODO Ubuntu Restricted Extras
+** TODO Gnome Sushi - spacebar preview
+** TODO LibreOffice
+** TODO VLC
+** TODO Filezilla
 * Fonts:
 ** Fira Mono: https://fonts.google.com/specimen/Fira+Mono
 
@@ -34,8 +39,10 @@
 ** Leiningen:
 *** https://github.com/technomancy/leiningen
 
-* TODO TODO
-** Commit new dotfiles repo
-** Change aliases in homedir to point to dotfiles repo
-** Change files on mac boxes to be aliases to dotfiles repo
-** Remove actual dotfiles from old homedir repo
+* TODO
+** DONE Commit new dotfiles repo
+   CLOSED: [2017-09-03 Sun 12:35]
+** DONE Change aliases in homedir to point to dotfiles repo
+   CLOSED: [2017-09-03 Sun 12:36]
+** TODO Change files on imac to be aliases to dotfiles repo
+** TODO Remove actual dotfiles from old homedir repo
