--- a/NewLinuxSetup.org
+++ b/NewLinuxSetup.org
@@ -1,15 +1,16 @@
 * Preferences: dvorak
-* sudo apt install [vim, terminator?
-** Vim:
-*** vim: pathogen - mkdir -p ~/.vim/autoload ~/.vim/bundle && \
- curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
-*** mkdir -p ~/tmp/vim_backup
-*** cd ~/.vim/bundle && git clone git://github.com/altercation/vim-colors-solarized.git
 * Enable repos:
 ** sudo -i software-properties-gtk
 *** In "other software": add (s/zesty/current-release-nickname/): deb http://archive.canonical.com/ubuntu zesty partner
 *** check desired repos in 1st & 2nd tab
 *** in updates tab, check desired updates
+*** Additional Drivers -- autosearch
+* sudo apt install [vim, gnome-shell-extension-dashtodock, google-chrome-stable, filezilla, vlc
+* Vim:
+** vim: pathogen - mkdir -p ~/.vim/autoload ~/.vim/bundle && \
+curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
+** mkdir -p ~/tmp/vim_backup
+** cd ~/.vim/bundle && git clone git://github.com/altercation/vim-colors-solarized.gi
 * Download & install:
 ** Chrome - although I'm noticing it's a CPU hog, at least in VM, at least w/ lots of tabs
 ** LastPass
@@ -20,12 +21,29 @@
 ** Spacemacs
 *** sudo apt install emacs<25>
 *** git clone https://github.com/syl20bnr/spacemacs ~/.emacs.d
-** VLC
-** Filezilla
 ** DarkTable
 *** sudo add-apt-repository ppa:pmjdebruijn/darktable-release && sudo apt-get update
-* Fonts:
-** Fira Mono: https://fonts.google.com/specimen/Fira+Mono
+
+** TODO Bleachbit and/or Stacer (optimizer)
+
+*** Stacer (sourceforge, ick) - https://github.com/oguzhaninan/Stacer/releases
+** TODO Redshift
+** TODO Indicator Multiload — monitor system resources
+** TODO Bulletin — A searchable clipboard manager
+** Useful extras: http://www.omgubuntu.co.uk/2017/04/things-to-do-after-installing-ubuntu-17-04
+* Customization tweaks:
+** Fonts:
+*** Fira Mono: https://fonts.google.com/specimen/Fira+Mono
+** Icons:
+*** Numix
+**** sudo add-apt-repository ppa:numix/ppa
+**** sudo apt update && sudo apt install numix-icon-theme-circle
+**** sudo apt-get update
+**** sudo apt-get install numix-icon-theme-circle
+*** Papirus
+**** sudo add-apt-repository ppa:papirus/papirus
+**** sudo apt update && sudo apt install papirus-icon-theme
+
 
 * Clojure:
 ** Java:
@@ -39,6 +57,13 @@
       oracle-java8-installer
 ** Leiningen:
 *** https://github.com/technomancy/leiningen
+
+* Gnome-tweak-tool to change various settings
+** Under typing:
+*** Under caps-lock I can switch caps & esc
+*** Under ctrl-key-position I can switch ctrl/alt/command
+** Under fonts: can scale fonts
+** Under extensions: 'window list' provides something dockish
 
 * TODO
 ** DONE Commit new dotfiles repo
