--- a/NewLinuxSetup.org
+++ b/NewLinuxSetup.org
@@ -5,8 +5,8 @@
 *** check desired repos in 1st & 2nd tab
 *** in updates tab, check desired updates
 *** Additional Drivers -- autosearch
-* sudo apt install [vim, gnome-shell-extension-dashtodock, google-chrome-stable, filezilla, vlc
-* Vim:
+* sudo apt install: vim, gnome-shell-extension-dashtodock, google-chrome-stable, filezilla, vlc
+* Vim setup:
 ** vim: pathogen - mkdir -p ~/.vim/autoload ~/.vim/bundle && \
 curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
 ** mkdir -p ~/tmp/vim_backup
@@ -40,11 +40,12 @@ curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
 **** sudo apt update && sudo apt install numix-icon-theme-circle
 **** sudo apt-get update
 **** sudo apt-get install numix-icon-theme-circle
+**** sudo apt-get install numix-icon-theme-square
 *** Papirus
 **** sudo add-apt-repository ppa:papirus/papirus
 **** sudo apt update && sudo apt install papirus-icon-theme
-
-
+** Theme:
+*** Plano: http://www.omgubuntu.co.uk/2017/04/plano-gtk-theme
 * Clojure:
 ** Java:
 ** https://www.digitalocean.com/community/tutorials/how-to-install-java-on-ubuntu-with-apt-get
