--- a/NewLinuxSetup.org
+++ b/NewLinuxSetup.org
@@ -5,7 +5,7 @@
 *** check desired repos in 1st & 2nd tab
 *** in updates tab, check desired updates
 *** Additional Drivers -- autosearch
-* sudo apt install: vim, gnome-shell-extension-dashtodock, google-chrome-stable, filezilla, vlc, xsel
+* sudo apt install: vim, gnome-shell-extension-dashtodock, google-chrome-stable, filezilla, vlc, xsel, python-pygments
 ** Windows emulation (maybe):
 *** wine, winetricks, playonlinux
 * Vim setup:
